Upgraded to Java 11